# summarizer-api-sqlite

./: .env  .gitignore  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  start-api.sh
app/: config.py  db.py  db_migrate.py  main.py  models.py  schemas.py  summarizer.py
app/docker/: Dockerfile.api  Dockerfile.ollama  entrypoint.sh
docker/: Dockerfile.api  Dockerfile.ollama
